# jarvis

./: client_test.py  main.py  pyproject.toml
src/actions/: media_actions.py  monday_actions.py  os_actions.py  web_actions.py
src/nlp/: parser.py
src/routes/: jarvis_routes.py
src/service/: agent_service.py  audio_service.py  monday_service.py
