[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "llama-index-core>=0.14.22",
    "llama-index-llms-groq>=0.5.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]
